--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="screen_next">NEXT</string>
     <string name="welcome">Welcome</string>
     <string name="email_error">Please enter a email address</string>
-    <string name="error_invalid_email">Email is not valid</string>
+    <string name="error_invalid_email">Please Correct Email</string>
     <string name="password_error">Please enter a password</string>
     <string name="error_invalid_password">Please enter a minimum 8 characters</string>
     <string name="passwor_pattern">Password is too weak</string>
@@ -52,7 +52,7 @@
     <string name="more">more1</string>
     <string name="sign_up">CREATE AN ACCOUNT</string>
     <string name="signin_text">Don’t have an account?</string>
-    <string name="username_hint">Username</string>
+    <string name="username_hint">Email</string>
     <string name="signin_label">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
     <string name="signin_welcome_back">Welcome back</string>
     <string name="subtitel">Grocery App</string>
