--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="email_error">Please enter a email address</string>
     <string name="error_invalid_email">Please Correct Email</string>
     <string name="password_error">Please enter a password</string>
-    <string name="error_invalid_password">Please enter a minimum 8 characters</string>
+    <string name="error_invalid_password">"The password is invalid it must 8 characters at least"</string>
     <string name="passwor_pattern">Password is too weak</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
